--- a/templates/exercicios.html
+++ b/templates/exercicios.html
@@ -38,6 +38,9 @@
                 {% if exercicio.grupo_muscular %}
                     <br><small>Grupo Muscular: {{ exercicio.grupo_muscular }}</small>
                 {% endif %}
+                <br>
+                <a href="{{ url_for('edit_exercicio', id=exercicio.id) }}" style="color: green; text-decoration: none; margin-right: 10px;">✏️ Editar</a>
+                <a href="{{ url_for('delete_exercicio', id=exercicio.id) }}" style="color: red; text-decoration: none;" onclick="return confirm('Tem certeza que deseja excluir este exercício?')">🗑 Excluir</a>
             </li>
         {% else %}
             <li>Nenhum exercício cadastrado ainda.</li>
