--- a/templates/registrar_treino.html
+++ b/templates/registrar_treino.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <a href="{{ url_for('registrar_treino') }}" style="display: block; margin-top: 15px; margin-bottom: 25px; padding: 10px; background-color: #4CAF50; color: white; text-align: center; text-decoration: none; border-radius: 5px;">
-        🎯 Iniciar Nova Sessão de Treino
+        Iniciar Nova Sessão de Treino
     </a>
 
     <form method="POST">
